@@ -1,3 +1,8 @@
+2010-05-26  Rafael Espindola  <espindola@google.com>
+
+	* script-sections.cc (Output_section_definition::set_section_addresses):
+	Check for --section-start.
+
 2010-05-26  Doug Kwan  <dougkwan@google.com>
 
 	* arm.cc (Arm_scan_relocatable_relocs): New class.
